<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="de.bitshares_munich.smartcoinswallet.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/account_create_register_or_import"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_account_name"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/etAccountName"
        android:layout_width="match_parent"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_height="40dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_6_digits_pin"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_height="40dp"
        android:maxLength="6"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_6_digits_pin_confirm"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/etPinConfirmation"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_height="40dp"
        android:maxLength="6"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/existing_account"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:weightSum="4"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/v_1_0_beta"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/block_number"/>
    </LinearLayout>
</LinearLayout>
