<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_wif_activity"
        android:textSize="24dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/textView" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="30dp"
        android:text="@string/txt_wif_paste"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etWif"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_bg"
        android:textIsSelectable="true"
        android:gravity="top" />

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_6_digits_pin"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etPin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:maxLines="1"
        android:layout_height="40dp"/>
    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_6_digits_pin_confirm"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etPinConfirmation"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/pink"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/green"
            android:padding="10dp"
            android:text="@string/create_wallet"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>