<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_6_digits_pin"
        android:id="@+id/tvPin"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:maxLines="1"
        android:layout_height="40dp"/>
    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvPinConfirmation"
        android:text="@string/txt_6_digits_pin_confirm"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/etPinConfirmation"
        android:layout_width="match_parent"
        android:inputType="number"
        android:background="@drawable/edittext_bg"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_height="40dp" />


    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_brain_key"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/etBrainKey"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_bg"
        android:layout_height="120dp"
        android:gravity="top"/>

    <TextView
        android:visibility="gone"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_brain_key_info"
        android:textSize="15dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/btnWallet"
            android:text="@string/create_wallet"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:background="@color/bottomBarColor">
        <TextView
            android:text="@string/v_1_0_beta"
            android:id="@+id/tvAppVersion_brain_key_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:id="@+id/tvBlockNumberHead_brain_key_activity"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/block_number"/>

            <ImageView
                android:id="@+id/ivSocketConnected_brain_key_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"/>

            <ImageView android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:src="@drawable/icon_setting"
                android:visibility="invisible"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
