<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
  >

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_brain_key"
        android:layout_marginTop="10dp"
        android:textSize="21sp"
        android:textAlignment="textStart" />
    <EditText
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/etBrainKey"
        android:layout_width="match_parent"
        android:inputType="none"
        android:background="@drawable/edittext_bg"
        android:layout_height="200dp"
        android:textIsSelectable="true"
        android:gravity="top"/>

    <TextView
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_brain_key_info"
        android:textSize="15dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:id="@+id/btnCopy"
            android:text="@string/copy"/>

    </LinearLayout>


</LinearLayout>
